manifest/observability/tracing/victoriatraces/vtselect/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: vtselect
  name: vtselect
  namespace: tracing
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vtselect.kubeop.com
    secretName: kubeop.com-ssl
  rules:
    - host: vtselect.kubeop.com
      http:
        paths:
          - path: /select
            pathType: Prefix
            backend:
              service:
                name: vtselect
                port:
                  name: http
